[gd_scene load_steps=32 format=2]

[ext_resource path="res://chess_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://scr/Board.gd" type="Script" id=2]
[ext_resource path="res://tiles/black_king.png" type="Texture" id=3]
[ext_resource path="res://scr/Mapping.gd" type="Script" id=4]
[ext_resource path="res://tiles/black_pawn.png" type="Texture" id=5]
[ext_resource path="res://scr/CameraFollowing.gd" type="Script" id=6]
[ext_resource path="res://tiles/white_king.png" type="Texture" id=7]
[ext_resource path="res://scr/NPC.gd" type="Script" id=8]
[ext_resource path="res://tiles/black_queen.png" type="Texture" id=9]
[ext_resource path="res://fonts/Russo_One.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://tiles/white_pawn.png" type="Texture" id=11]
[ext_resource path="res://tiles/white_knight.png" type="Texture" id=12]
[ext_resource path="res://scr/World.gd" type="Script" id=13]
[ext_resource path="res://tiles/white_rook.png" type="Texture" id=14]
[ext_resource path="res://tiles/white_bishop.png" type="Texture" id=15]
[ext_resource path="res://tiles/white_queen.png" type="Texture" id=16]
[ext_resource path="res://scr/Piece.gd" type="Script" id=17]
[ext_resource path="res://menu_buttons.tres" type="StyleBox" id=18]
[ext_resource path="res://icons/back.png" type="Texture" id=19]
[ext_resource path="res://tiles/black_knight.png" type="Texture" id=22]
[ext_resource path="res://tiles/black_rook.png" type="Texture" id=23]
[ext_resource path="res://tiles/black_bishop.png" type="Texture" id=26]

[sub_resource type="Theme" id=12]

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 10 )

[sub_resource type="InputEventAction" id=8]
action = "ui_accept"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 8 )

[sub_resource type="InputEventAction" id=9]
action = "ui_cancel"

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 10 )

[sub_resource type="Theme" id=13]

[node name="World" type="Node2D"]
z_index = 1
script = ExtResource( 13 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 83, 98 )
cell_half_offset = 1
centered_textures = true
format = 1
tile_data = PoolIntArray( -589796, 26, 0, -589795, 26, 0, -458766, 3, 0, -458765, 3, 0, -458764, 3, 0, -458763, 3, 0, -458762, 3, 0, -458761, 3, 0, -458760, 3, 0, -458759, 3, 0, -458758, 3, 0, -458757, 3, 0, -458756, 3, 0, -458755, 3, 0, -458754, 3, 0, -458753, 3, 0, -524288, 3, 0, -524287, 3, 0, -524286, 3, 0, -524285, 3, 0, -524284, 3, 0, -524283, 3, 0, -524282, 3, 0, -524281, 3, 0, -524280, 3, 0, -524279, 3, 0, -524278, 3, 0, -524277, 3, 0, -524276, 3, 0, -524275, 3, 0, -524274, 3, 0, -524260, 26, 0, -524259, 26, 0, -393230, 3, 0, -393229, 3, 0, -393228, 3, 0, -393227, 3, 0, -393226, 3, 0, -393225, 3, 0, -393224, 3, 0, -393223, 3, 0, -393222, 3, 0, -393221, 3, 0, -393220, 3, 0, -393219, 3, 0, -393218, 3, 0, -393217, 3, 0, -458752, 3, 0, -458751, 3, 0, -458750, 3, 0, -458749, 3, 0, -458748, 3, 0, -458747, 3, 0, -458746, 3, 0, -458745, 3, 0, -458744, 3, 0, -458743, 3, 0, -458742, 3, 0, -458741, 3, 0, -458740, 3, 0, -458739, 3, 0, -458738, 3, 0, -458724, 26, 0, -458723, 26, 0, -327694, 3, 0, -327693, 3, 0, -327692, 3, 0, -327691, 3, 0, -327690, 3, 0, -327689, 3, 0, -327688, 3, 0, -327687, 3, 0, -327686, 3, 0, -327685, 3, 0, -327684, 3, 0, -327683, 3, 0, -327682, 3, 0, -327681, 3, 0, -393216, 3, 0, -393215, 3, 0, -393214, 3, 0, -393213, 3, 0, -393212, 3, 0, -393211, 3, 0, -393210, 3, 0, -393209, 3, 0, -393208, 3, 0, -393207, 3, 0, -393206, 3, 0, -393205, 3, 0, -393204, 3, 0, -393203, 3, 0, -393202, 3, 0, -393188, 26, 0, -393187, 26, 0, -262158, 3, 0, -262157, 3, 0, -262156, 3, 0, -262155, 3, 0, -262154, 3, 0, -262153, 3, 0, -262152, 3, 0, -262151, 3, 0, -262150, 3, 0, -262149, 3, 0, -262148, 3, 0, -262147, 3, 0, -262146, 3, 0, -262145, 3, 0, -327680, 3, 0, -327679, 3, 0, -327678, 3, 0, -327677, 3, 0, -327676, 3, 0, -327675, 3, 0, -327674, 3, 0, -327673, 3, 0, -327672, 3, 0, -327671, 3, 0, -327670, 3, 0, -327669, 3, 0, -327668, 3, 0, -327667, 3, 0, -327666, 3, 0, -327652, 26, 0, -327651, 26, 0, -196622, 3, 0, -196621, 3, 0, -196620, 3, 0, -196619, 3, 0, -196618, 3, 0, -196617, 3, 0, -196616, 3, 0, -196615, 3, 0, -196614, 3, 0, -196613, 3, 0, -196612, 3, 0, -196611, 3, 0, -196610, 3, 0, -196609, 3, 0, -262144, 3, 0, -262143, 3, 0, -262142, 3, 0, -262141, 3, 0, -262140, 3, 0, -262139, 3, 0, -262138, 3, 0, -262137, 3, 0, -262136, 3, 0, -262135, 3, 0, -262134, 3, 0, -262133, 3, 0, -262132, 3, 0, -262131, 3, 0, -262130, 3, 0, -262116, 26, 0, -262115, 26, 0, -131086, 3, 0, -131085, 3, 0, -131084, 3, 0, -131083, 3, 0, -131082, 3, 0, -131081, 3, 0, -131080, 3, 0, -131079, 3, 0, -131078, 3, 0, -131077, 3, 0, -131076, 3, 0, -131075, 3, 0, -131074, 3, 0, -131073, 3, 0, -196608, 3, 0, -196607, 3, 0, -196606, 3, 0, -196605, 3, 0, -196604, 3, 0, -196603, 3, 0, -196602, 3, 0, -196601, 3, 0, -196600, 3, 0, -196599, 3, 0, -196598, 3, 0, -196597, 3, 0, -196596, 3, 0, -196595, 3, 0, -196594, 3, 0, -196580, 26, 0, -196579, 26, 0, -65550, 3, 0, -65549, 3, 0, -65548, 3, 0, -65547, 3, 0, -65546, 3, 0, -65545, 3, 0, -65544, 3, 0, -65543, 3, 0, -65542, 3, 0, -65541, 3, 0, -65540, 3, 0, -65539, 3, 0, -65538, 3, 0, -65537, 3, 0, -131072, 3, 0, -131071, 3, 0, -131070, 3, 0, -131069, 3, 0, -131068, 3, 0, -131067, 3, 0, -131066, 3, 0, -131065, 3, 0, -131064, 3, 0, -131063, 3, 0, -131062, 3, 0, -131061, 3, 0, -131060, 3, 0, -131059, 3, 0, -131058, 3, 0, -131044, 26, 0, -131043, 26, 0, -14, 3, 0, -13, 3, 0, -12, 3, 0, -11, 3, 0, -10, 3, 0, -9, 3, 0, -8, 3, 0, -7, 3, 0, -6, 3, 0, -5, 3, 0, -4, 3, 0, -3, 3, 0, -2, 3, 0, -1, 3, 0, -65536, 3, 0, -65535, 3, 0, -65534, 3, 0, -65533, 3, 0, -65532, 3, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65528, 3, 0, -65527, 3, 0, -65526, 3, 0, -65525, 3, 0, -65524, 3, 0, -65523, 3, 0, -65522, 3, 0, -65508, 26, 0, -65507, 26, 0, 65522, 3, 0, 65523, 3, 0, 65524, 3, 0, 65525, 3, 0, 65526, 3, 0, 65527, 3, 0, 65528, 3, 0, 65529, 3, 0, 65530, 3, 0, 65531, 3, 0, 65532, 3, 0, 65533, 3, 0, 65534, 3, 0, 65535, 3, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 28, 26, 0, 29, 26, 0, 131058, 3, 0, 131059, 3, 0, 131060, 3, 0, 131061, 3, 0, 131062, 3, 0, 131063, 3, 0, 131064, 3, 0, 131065, 3, 0, 131066, 3, 0, 131067, 3, 0, 131068, 3, 0, 131069, 3, 0, 131070, 3, 0, 131071, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65564, 26, 0, 65565, 26, 0, 196594, 3, 0, 196595, 3, 0, 196596, 3, 0, 196597, 3, 0, 196598, 3, 0, 196599, 3, 0, 196600, 3, 0, 196601, 3, 0, 196602, 3, 0, 196603, 3, 0, 196604, 3, 0, 196605, 3, 0, 196606, 3, 0, 196607, 3, 0, 131072, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131100, 26, 0, 131101, 26, 0, 262130, 3, 0, 262131, 3, 0, 262132, 3, 0, 262133, 3, 0, 262134, 3, 0, 262135, 3, 0, 262136, 3, 0, 262137, 3, 0, 262138, 3, 0, 262139, 3, 0, 262140, 3, 0, 262141, 3, 0, 262142, 3, 0, 262143, 3, 0, 196608, 3, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196636, 26, 0, 196637, 26, 0, 327666, 3, 0, 327667, 3, 0, 327668, 3, 0, 327669, 3, 0, 327670, 3, 0, 327671, 3, 0, 327672, 3, 0, 327673, 3, 0, 327674, 3, 0, 327675, 3, 0, 327676, 3, 0, 327677, 3, 0, 327678, 3, 0, 327679, 3, 0, 262144, 3, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262172, 26, 0, 262173, 26, 0, 393202, 3, 0, 393203, 3, 0, 393204, 3, 0, 393205, 3, 0, 393206, 3, 0, 393207, 3, 0, 393208, 3, 0, 393209, 3, 0, 393210, 3, 0, 393211, 3, 0, 393212, 3, 0, 393213, 3, 0, 393214, 3, 0, 393215, 3, 0, 327680, 3, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0, 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 0, 327694, 3, 0, 327708, 26, 0, 327709, 26, 0, 458738, 3, 0, 458739, 3, 0, 458740, 3, 0, 458741, 3, 0, 458742, 3, 0, 458743, 3, 0, 458744, 3, 0, 458745, 3, 0, 458746, 3, 0, 458747, 3, 0, 458748, 3, 0, 458749, 3, 0, 458750, 3, 0, 458751, 3, 0, 393216, 3, 0, 393217, 3, 0, 393218, 3, 0, 393219, 3, 0, 393220, 3, 0, 393221, 3, 0, 393222, 3, 0, 393223, 3, 0, 393224, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 3, 0, 393230, 3, 0, 393244, 26, 0, 393245, 26, 0, 524274, 3, 0, 524275, 3, 0, 524276, 3, 0, 524277, 3, 0, 524278, 3, 0, 524279, 3, 0, 524280, 3, 0, 524281, 3, 0, 524282, 3, 0, 524283, 3, 0, 524284, 3, 0, 524285, 3, 0, 524286, 3, 0, 524287, 3, 0, 458752, 3, 0, 458753, 3, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458780, 26, 0, 458781, 26, 0, 1048548, 26, 0, 1048549, 26, 0, 1048550, 26, 0, 1048551, 26, 0, 1048552, 26, 0, 1048553, 26, 0, 1048554, 26, 0, 1048555, 26, 0, 1048556, 26, 0, 1048557, 26, 0, 1048558, 26, 0, 1048559, 26, 0, 1114084, 26, 0, 1114085, 26, 0, 1114086, 26, 0, 1114087, 26, 0, 1114088, 26, 0, 1114089, 26, 0, 1114090, 26, 0, 1114091, 26, 0, 1114092, 26, 0, 1114093, 26, 0, 1114094, 26, 0, 1114095, 26, 0, 1114096, 26, 0, 1114097, 26, 0, 1114098, 26, 0, 1114099, 26, 0, 1114100, 26, 0, 1114101, 26, 0, 1114102, 26, 0, 1114103, 26, 0, 1114104, 26, 0, 1114105, 26, 0, 1114106, 26, 0, 1114107, 26, 0, 1114108, 26, 0, 1114109, 26, 0, 1114110, 26, 0, 1114111, 26, 0, 1048576, 26, 0, 1048577, 26, 0, 1048578, 26, 0, 1048579, 26, 0, 1048580, 26, 0, 1048581, 26, 0, 1048582, 26, 0, 1048583, 26, 0, 1048584, 26, 0, 1048585, 26, 0, 1048586, 26, 0, 1048587, 26, 0, 1048588, 26, 0, 1048589, 26, 0, 1048590, 26, 0, 1048591, 26, 0, 1048592, 26, 0, 1048593, 26, 0, 1048594, 26, 0, 1048595, 26, 0, 1048596, 26, 0, 1048597, 26, 0, 1048598, 26, 0, 1048599, 26, 0, 1048600, 26, 0, 1048601, 26, 0, 1048602, 26, 0, 1048603, 26, 0, 1048604, 26, 0, 1048605, 26, 0, 1179620, 26, 0, 1179621, 26, 0, 1179622, 26, 0, 1179623, 26, 0, 1179624, 26, 0, 1179625, 26, 0, 1179626, 26, 0, 1179627, 26, 0, 1179628, 26, 0, 1179629, 26, 0, 1179630, 26, 0, 1179631, 26, 0, 1179632, 26, 0, 1179633, 26, 0, 1179634, 26, 0, 1179635, 26, 0, 1179636, 26, 0, 1179637, 26, 0, 1179638, 26, 0, 1179639, 26, 0, 1179640, 26, 0, 1179641, 26, 0, 1179642, 26, 0, 1179643, 26, 0, 1179644, 26, 0, 1179645, 26, 0, 1179646, 26, 0, 1179647, 26, 0, 1114112, 26, 0, 1114113, 26, 0, 1114114, 26, 0, 1114115, 26, 0, 1114116, 26, 0, 1114117, 26, 0, 1114118, 26, 0, 1114119, 26, 0, 1114120, 26, 0, 1114121, 26, 0, 1114122, 26, 0, 1114123, 26, 0, 1114124, 26, 0, 1114125, 26, 0, 1114126, 26, 0, 1114127, 26, 0, 1114128, 26, 0, 1114129, 26, 0, 1114130, 26, 0, 1114131, 26, 0, 1114132, 26, 0, 1114133, 26, 0, 1114134, 26, 0, 1114135, 26, 0, 1114136, 26, 0, 1114137, 26, 0, 1114138, 26, 0, 1114139, 26, 0, 1114140, 26, 0, 1114141, 26, 0, 1245156, 26, 0, 1245157, 26, 0, 1245158, 26, 0, 1245159, 26, 0, 1245160, 26, 0, 1245161, 26, 0, 1245162, 26, 0, 1245163, 26, 0, 1245164, 26, 0, 1245165, 26, 0, 1245166, 26, 0, 1245167, 26, 0, 1245168, 26, 0, 1245169, 26, 0, 1245170, 26, 0, 1245171, 26, 0, 1245172, 26, 0, 1245173, 26, 0, 1245174, 26, 0, 1245175, 26, 0, 1245176, 26, 0, 1245177, 26, 0, 1245178, 26, 0, 1245179, 26, 0, 1245180, 26, 0, 1245181, 26, 0, 1245182, 26, 0, 1245183, 26, 0, 1179648, 26, 0, 1179649, 26, 0, 1179650, 26, 0, 1179651, 26, 0, 1179652, 26, 0, 1179653, 26, 0, 1179654, 26, 0, 1179655, 26, 0, 1179656, 26, 0, 1179657, 26, 0, 1179658, 26, 0, 1179659, 26, 0, 1179660, 26, 0, 1179661, 26, 0, 1179662, 26, 0, 1179663, 26, 0, 1179664, 26, 0, 1179665, 26, 0, 1179666, 26, 0, 1179667, 26, 0, 1179668, 26, 0, 1179669, 26, 0, 1179670, 26, 0, 1179671, 26, 0, 1179672, 26, 0, 1179673, 26, 0, 1179674, 26, 0, 1179675, 26, 0, 1179676, 26, 0, 1179677, 26, 0, 1310692, 26, 0, 1310693, 26, 0, 1310694, 26, 0, 1310695, 26, 0, 1310696, 26, 0, 1310697, 26, 0, 1310698, 26, 0, 1310699, 26, 0, 1310700, 26, 0, 1310701, 26, 0, 1310702, 26, 0, 1310703, 26, 0, 1310704, 26, 0, 1310705, 26, 0, 1310706, 26, 0, 1310707, 26, 0, 1310708, 26, 0, 1310709, 26, 0, 1310710, 26, 0, 1310711, 26, 0, 1310712, 26, 0, 1310713, 26, 0, 1310714, 26, 0, 1310715, 26, 0, 1310716, 26, 0, 1310717, 26, 0, 1310718, 26, 0, 1310719, 26, 0, 1245184, 26, 0, 1245185, 26, 0, 1245186, 26, 0, 1245187, 26, 0, 1245188, 26, 0, 1245189, 26, 0, 1245190, 26, 0, 1245191, 26, 0, 1245192, 26, 0, 1245193, 26, 0, 1245194, 26, 0, 1245195, 26, 0, 1245196, 26, 0, 1245197, 26, 0, 1245198, 26, 0, 1245199, 26, 0, 1245200, 26, 0, 1245201, 26, 0, 1245202, 26, 0, 1245203, 26, 0, 1245204, 26, 0, 1245205, 26, 0, 1245206, 26, 0, 1245207, 26, 0, 1245208, 26, 0, 1245209, 26, 0, 1245210, 26, 0, 1245211, 26, 0, 1245212, 26, 0, 1245213, 26, 0, 1376228, 26, 0, 1376229, 26, 0, 1376230, 26, 0, 1376231, 26, 0, 1376232, 26, 0, 1376233, 26, 0, 1376234, 26, 0, 1376235, 26, 0, 1376236, 26, 0, 1376237, 26, 0, 1376238, 26, 0, 1376239, 26, 0, 1376240, 26, 0, 1376241, 26, 0, 1376242, 26, 0, 1376243, 26, 0, 1376244, 26, 0, 1376245, 26, 0, 1376246, 26, 0, 1376247, 26, 0, 1376248, 26, 0, 1376249, 26, 0, 1376250, 26, 0, 1376251, 26, 0, 1376252, 26, 0, 1376253, 26, 0, 1376254, 26, 0, 1376255, 26, 0, 1310720, 26, 0, 1310721, 26, 0, 1310722, 26, 0, 1310723, 26, 0, 1310724, 26, 0, 1310725, 26, 0, 1310726, 26, 0, 1310727, 26, 0, 1310728, 26, 0, 1310729, 26, 0, 1310730, 26, 0, 1310731, 26, 0, 1310732, 26, 0, 1310733, 26, 0, 1310734, 26, 0, 1310735, 26, 0, 1310736, 26, 0, 1310737, 26, 0, 1310738, 26, 0, 1310739, 26, 0, 1310740, 26, 0, 1310741, 26, 0, 1310742, 26, 0, 1310743, 26, 0, 1310744, 26, 0, 1310745, 26, 0, 1310746, 26, 0, 1310747, 26, 0, 1310748, 26, 0, 1310749, 26, 0, 1441764, 26, 0, 1441765, 26, 0, 1441766, 26, 0, 1441767, 26, 0, 1441768, 26, 0, 1441769, 26, 0, 1441770, 26, 0, 1441771, 26, 0, 1441772, 26, 0, 1441773, 26, 0, 1441774, 26, 0, 1441775, 26, 0, 1441776, 26, 0, 1441777, 26, 0, 1441778, 26, 0, 1441779, 26, 0, 1441780, 26, 0, 1441781, 26, 0, 1441782, 26, 0, 1441783, 26, 0, 1441784, 26, 0, 1441785, 26, 0, 1441786, 26, 0, 1441787, 26, 0, 1441788, 26, 0, 1441789, 26, 0, 1441790, 26, 0, 1441791, 26, 0, 1376256, 26, 0, 1376257, 26, 0, 1376258, 26, 0, 1376259, 26, 0, 1376260, 26, 0, 1376261, 26, 0, 1376262, 26, 0, 1376263, 26, 0, 1376264, 26, 0, 1376265, 26, 0, 1376266, 26, 0, 1376267, 26, 0, 1376268, 26, 0, 1376269, 26, 0, 1376270, 26, 0, 1376271, 26, 0, 1376272, 26, 0, 1376273, 26, 0, 1376274, 26, 0, 1376275, 26, 0, 1376276, 26, 0, 1376277, 26, 0, 1376278, 26, 0, 1376279, 26, 0, 1376280, 26, 0, 1376281, 26, 0, 1376282, 26, 0, 1376283, 26, 0, 1376284, 26, 0, 1376285, 26, 0 )
script = ExtResource( 2 )

[node name="Mapping" type="Node" parent="TileMap"]
script = ExtResource( 4 )

[node name="Piece" type="Node2D" parent="TileMap"]
visible = false
position = Vector2( 0, -1 )
script = ExtResource( 8 )

[node name="King" type="Node2D" parent="TileMap/Piece"]
visible = false
position = Vector2( 0, 1 )
script = ExtResource( 17 )

[node name="Black" type="Sprite" parent="TileMap/Piece/King"]
visible = false
position = Vector2( -10, -10 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
centered = false

[node name="White" type="Sprite" parent="TileMap/Piece/King"]
visible = false
position = Vector2( -10, -10 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 7 )
centered = false

[node name="Queen" type="Node2D" parent="TileMap/Piece"]
visible = false
position = Vector2( 0, 1 )
script = ExtResource( 17 )

[node name="Black" type="Sprite" parent="TileMap/Piece/Queen"]
visible = false
position = Vector2( -10, -10 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )
centered = false

[node name="White" type="Sprite" parent="TileMap/Piece/Queen"]
visible = false
position = Vector2( -10, -10 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 16 )
centered = false

[node name="Pawn" type="Node2D" parent="TileMap/Piece"]
visible = false
script = ExtResource( 17 )

[node name="Black" type="Sprite" parent="TileMap/Piece/Pawn"]
visible = false
position = Vector2( -13, -13 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 5 )
centered = false

[node name="White" type="Sprite" parent="TileMap/Piece/Pawn"]
visible = false
position = Vector2( -13, -13 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 11 )
centered = false

[node name="Bishop" type="Node2D" parent="TileMap/Piece"]
visible = false
script = ExtResource( 17 )

[node name="Black" type="Sprite" parent="TileMap/Piece/Bishop"]
visible = false
position = Vector2( -10, -10 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 26 )
centered = false

[node name="White" type="Sprite" parent="TileMap/Piece/Bishop"]
visible = false
position = Vector2( -10, -10 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 15 )
centered = false

[node name="Rook" type="Node2D" parent="TileMap/Piece"]
visible = false
script = ExtResource( 17 )

[node name="Black" type="Sprite" parent="TileMap/Piece/Rook"]
visible = false
position = Vector2( -10, -10 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 23 )
centered = false

[node name="White" type="Sprite" parent="TileMap/Piece/Rook"]
visible = false
position = Vector2( -10, -10 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 14 )
centered = false

[node name="Knight" type="Node2D" parent="TileMap/Piece"]
visible = false
script = ExtResource( 17 )

[node name="Black" type="Sprite" parent="TileMap/Piece/Knight"]
visible = false
position = Vector2( -10, -10 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 22 )
centered = false

[node name="White" type="Sprite" parent="TileMap/Piece/Knight"]
visible = false
position = Vector2( -10, -10 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 12 )
centered = false

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Announcement" type="Panel" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -31.0
margin_right = 180.0
margin_bottom = 31.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = ExtResource( 18 )

[node name="Announcement" type="Label" parent="HUD/Announcement"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.0
margin_top = -14.0
margin_right = 142.0
margin_bottom = 14.0
theme = SubResource( 12 )
custom_fonts/font = SubResource( 6 )
text = "White is checkmated"
align = 1
valign = 1

[node name="EndGame" type="VBoxContainer" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = 40.0
margin_right = 85.0
margin_bottom = 122.0

[node name="TryAgain" type="Button" parent="HUD/EndGame"]
margin_right = 170.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = ExtResource( 18 )
custom_styles/pressed = ExtResource( 18 )
custom_styles/focus = ExtResource( 18 )
custom_styles/disabled = ExtResource( 18 )
custom_styles/normal = ExtResource( 18 )
shortcut = SubResource( 5 )
text = "try again?"

[node name="Exit" type="Button" parent="HUD/EndGame"]
margin_top = 23.0
margin_right = 170.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = ExtResource( 18 )
custom_styles/pressed = ExtResource( 18 )
custom_styles/focus = ExtResource( 18 )
custom_styles/disabled = ExtResource( 18 )
custom_styles/normal = ExtResource( 18 )
shortcut = SubResource( 10 )
text = "return to menu"

[node name="DrawOffer" type="VBoxContainer" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = 40.0
margin_right = 85.0
margin_bottom = 122.0

[node name="Accept" type="Button" parent="HUD/DrawOffer"]
margin_right = 170.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = ExtResource( 18 )
custom_styles/pressed = ExtResource( 18 )
custom_styles/focus = ExtResource( 18 )
custom_styles/disabled = ExtResource( 18 )
custom_styles/normal = ExtResource( 18 )
shortcut = SubResource( 5 )
text = "accept"

[node name="Decline" type="Button" parent="HUD/DrawOffer"]
margin_top = 23.0
margin_right = 170.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = ExtResource( 18 )
custom_styles/pressed = ExtResource( 18 )
custom_styles/focus = ExtResource( 18 )
custom_styles/disabled = ExtResource( 18 )
custom_styles/normal = ExtResource( 18 )
shortcut = SubResource( 10 )
text = "decline"

[node name="PromotionBox" type="HBoxContainer" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -206.0
margin_top = -20.0
margin_right = 206.0
margin_bottom = 20.0

[node name="Bishop" type="Button" parent="HUD/PromotionBox"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 18 )
custom_styles/pressed = ExtResource( 18 )
custom_styles/focus = ExtResource( 18 )
custom_styles/disabled = ExtResource( 18 )
custom_styles/normal = ExtResource( 18 )
text = "Bishop"

[node name="Knight" type="Button" parent="HUD/PromotionBox"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 18 )
custom_styles/pressed = ExtResource( 18 )
custom_styles/focus = ExtResource( 18 )
custom_styles/disabled = ExtResource( 18 )
custom_styles/normal = ExtResource( 18 )
text = "Knight"

[node name="Rook" type="Button" parent="HUD/PromotionBox"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 18 )
custom_styles/pressed = ExtResource( 18 )
custom_styles/focus = ExtResource( 18 )
custom_styles/disabled = ExtResource( 18 )
custom_styles/normal = ExtResource( 18 )
text = "Rook"

[node name="Queen" type="Button" parent="HUD/PromotionBox"]
margin_left = 312.0
margin_right = 412.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 18 )
custom_styles/pressed = ExtResource( 18 )
custom_styles/focus = ExtResource( 18 )
custom_styles/disabled = ExtResource( 18 )
custom_styles/normal = ExtResource( 18 )
text = "Queen"

[node name="MenuBox" type="HBoxContainer" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -152.0
margin_right = 152.0
margin_bottom = 40.0

[node name="Draw" type="Button" parent="HUD/MenuBox"]
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 18 )
custom_styles/pressed = ExtResource( 18 )
custom_styles/focus = ExtResource( 18 )
custom_styles/disabled = ExtResource( 18 )
custom_styles/normal = ExtResource( 18 )
text = "Offer a Draw"

[node name="Surrender" type="Button" parent="HUD/MenuBox"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 18 )
custom_styles/pressed = ExtResource( 18 )
custom_styles/focus = ExtResource( 18 )
custom_styles/disabled = ExtResource( 18 )
custom_styles/normal = ExtResource( 18 )
text = "Surrender"

[node name="RewindBox" type="HBoxContainer" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -152.0
margin_right = 152.0
margin_bottom = 40.0

[node name="Undo" type="Button" parent="HUD/RewindBox"]
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 18 )
custom_styles/pressed = ExtResource( 18 )
custom_styles/focus = ExtResource( 18 )
custom_styles/disabled = ExtResource( 18 )
custom_styles/normal = ExtResource( 18 )
disabled = true
text = "Undo"

[node name="Redo" type="Button" parent="HUD/RewindBox"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 18 )
custom_styles/pressed = ExtResource( 18 )
custom_styles/focus = ExtResource( 18 )
custom_styles/disabled = ExtResource( 18 )
custom_styles/normal = ExtResource( 18 )
disabled = true
text = "Redo"

[node name="BackPanel" type="Button" parent="HUD"]
visible = false
margin_right = 100.0
margin_bottom = 40.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = SubResource( 13 )
custom_styles/hover = ExtResource( 18 )
custom_styles/pressed = ExtResource( 18 )
custom_styles/focus = ExtResource( 18 )
custom_styles/disabled = ExtResource( 18 )
custom_styles/normal = ExtResource( 18 )

[node name="BackToMenu" type="TextureRect" parent="HUD/BackPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 120.0
margin_bottom = 121.0
grow_vertical = 2
rect_scale = Vector2( 0.3, 0.3 )
hint_tooltip = "Back to Menu"
texture = ExtResource( 19 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
zoom = Vector2( 2.2, 2.2 )
script = ExtResource( 6 )

[connection signal="pressed" from="HUD/EndGame/TryAgain" to="." method="_on_TryAgain_pressed"]
[connection signal="pressed" from="HUD/EndGame/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="HUD/DrawOffer/Accept" to="." method="_on_Accept_pressed"]
[connection signal="pressed" from="HUD/DrawOffer/Decline" to="." method="_on_Decline_pressed"]
[connection signal="pressed" from="HUD/MenuBox/Draw" to="." method="_on_Draw_pressed"]
[connection signal="pressed" from="HUD/MenuBox/Surrender" to="." method="_on_Surrender_pressed"]
[connection signal="pressed" from="HUD/BackPanel" to="." method="_on_BackPanel_pressed"]
